# demo-recordbatch-writer

./: Cargo.toml  LICENSE  README.adoc
src/: main.rs
