[package]
name = "demo-recordbatch-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
arrow = "27"
chrono = "0.4"
# Taking the commit off main as of 2022-10-26
deltalake = { git = "https://github.com/delta-io/delta-rs", branch = "main", features = ["arrow", "s3-rustls"]}
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["macros"] }
serde_json = "1"
